调整布局和背景图片

--- a/demo/templates/index.html
+++ b/demo/templates/index.html
@@ -33,21 +33,15 @@
       jQuery(document).ready(function($) {
         var background = new Easy_Background({
           background_color: "none",
-          pattern: "img/patterns/pattern-1.png",
+          pattern: "static/img/patterns/pattern-1.png",
           autoplay: "true",
           autoplayTime: 5,
 
-          images:["static/img/fullscreen/stare.jpg",
-          			"static/img/fullscreen/water-studio.JPG",
-					"static/img/fullscreen/ginger.jpg",
-					"static/img/fullscreen/couch.JPG",
-					"static/img/fullscreen/kruip.jpg",
-					"static/img/fullscreen/leg.jpg",
-					"static/img/fullscreen/moeg.jpg",
-					"static/img/fullscreen/tired.jpg",
-					"static/img/fullscreen/veld.jpg",
-					"static/img/fullscreen/glasses.jpg",
-					"static/img/fullscreen/vlinder.jpg"],
+          images:["static/img/fullscreen/screen1.jpg",
+          			"static/img/fullscreen/screen2.jpg",
+					"static/img/fullscreen/screen3.jpg",
+					"static/img/fullscreen/screen4.JPG",
+					"static/img/fullscreen/screen5.jpg"],
           images_sizing: "fill", // fill || adjust || stretch || repeat
 
           animationIn: { attribute:["y", "alpha"], // x || y || alpha
