--- a/demo/templates/index.html
+++ b/demo/templates/index.html
@@ -66,12 +66,12 @@
 	<!-- Side view contains the logo and header section -->
 	<div class="sideview">
 		<div class="logo">
-			<a href="index.html"><img src="static/img/layout/apachelogo.jpg" width="250" height="146" alt="Logo" /></a>
+			<a href="/"><img src="static/img/layout/apachelogo.jpg" width="250" height="146" alt="Logo" /></a>
 		</div><!-- end logo -->
 		<!-- Start menu -->
 		<div class="menu">
 			<ul class="nav">
-				<li><a href="index.html">Home<span class="desc">Back to the home page</span></a></li>
+				<li><a href="/">主页<span class="desc">Back to the home page</span></a></li>
 				<li class="dropdown"><a href="#">Apache配置<span class="desc">Layouts</span></a>
 					<ul>
 						<li><a href="../background-image/index.html">Fullscreen Image Background</a></li>
@@ -79,7 +79,7 @@
 						<li><a href="../background-plain/index.html">Plain Background</a></li>
 					</ul>
 				</li>
-				<li><a href="about.html">团队介绍<span class="desc">Meet the team</span></a></li>
+				<li><a href="/about">团队介绍<span class="desc">Meet the team</span></a></li>
 				<li class="dropdown"><a href="3-column.html">Our Work<span class="desc">Clients and projects</span></a>
 					<ul>
 						<li><a href="1-column.html">1 Column Gallery</a></li>
@@ -91,7 +91,7 @@
 						<li><a href="single-blog.html">Single Blog Page</a></li>
 					</ul>
 				</li> -->
-				<li><a href="contact.html" class="last">联系我们<span class="desc">Get in touch</span></a></li>
+				<li><a href="/contact" class="last">联系我们<span class="desc">Get in touch</span></a></li>
 			</ul>
 		</div><!-- end menu -->
 	</div><!-- end sideview -->
