搭建好了所有需要的页面框架，目前所有的页面大部分一样，除了团队介绍和联系我们内容结构已经做好，只需要填充实际内容。

--- a/demo/templates/conf.html
+++ b/demo/templates/conf.html
@@ -5,21 +5,21 @@
 <meta http-equiv="Content-Type" content="text/html;charset=UTF-8" />
 
 <!-- Load main style sheets -->
-<link rel="stylesheet" href="static/styles.css" />
+<link rel="stylesheet" href="../static/styles.css" />
 
 
-<link rel="shortcut icon" type="static/image/x-icon" href="favicon.ico" />
+<link rel="shortcut icon" type="../static/image/x-icon" href="favicon.ico" />
 
 <!-- Default stylesheets for the slider -->
-<link rel="stylesheet" href="static/nivo-slider/themes/default/default.css" type="text/css" media="screen" />
+<link rel="stylesheet" href="../static/nivo-slider/themes/default/default.css" type="text/css" media="screen" />
 
 <!-- Load Javascript and Jquery -->
-<script src="static/js/jquery-1.7.1.min.js"></script>
-<script src="static/js/jquery.nivo.slider.pack.js"></script>
-<script src="static/js/jquery.prettyPhoto.js"></script>
-<script src="static/js/jquery.validate.js"></script>
-<script type="text/javascript" src="static/js/jquery.easing.1.3.js"></script>
-<script type="text/javascript" src="static/js/background-image.js"></script>
+<script src="../static/js/jquery-1.7.1.min.js"></script>
+<script src="../static/js/jquery.nivo.slider.pack.js"></script>
+<script src="../static/js/jquery.prettyPhoto.js"></script>
+<script src="../static/js/jquery.validate.js"></script>
+<script type="text/javascript" src="../static/js/jquery.easing.1.3.js"></script>
+<script type="text/javascript" src="../static/js/background-image.js"></script>
 
 <!-- Nivo Slider -->
     <script type="text/javascript">
@@ -33,15 +33,15 @@
       jQuery(document).ready(function($) {
         var background = new Easy_Background({
           background_color: "none",
-          pattern: "static/img/patterns/pattern-1.png",
+          pattern: "../static/img/patterns/pattern-1.png",
           autoplay: "true",
           autoplayTime: 5,
 
-          images:["static/img/fullscreen/screen1.jpg",
-          			"static/img/fullscreen/screen2.jpg",
-					"static/img/fullscreen/screen3.jpg",
-					"static/img/fullscreen/screen4.JPG",
-					"static/img/fullscreen/screen5.jpg"],
+          images:["../static/img/fullscreen/screen1.jpg",
+          			"../static/img/fullscreen/screen2.jpg",
+					"../static/img/fullscreen/screen3.jpg",
+					"../static/img/fullscreen/screen4.JPG",
+					"../static/img/fullscreen/screen5.jpg"],
           images_sizing: "fill", // fill || adjust || stretch || repeat
 
           animationIn: { attribute:["y", "alpha"], // x || y || alpha
@@ -66,7 +66,7 @@
 	<!-- Side view contains the logo and header section -->
 	<div class="sideview">
 		<div class="logo">
-			<a href="/"><img src="static/img/layout/apachelogo.jpg" width="250" height="146" alt="Logo" /></a>
+			<a href="/"><img src="../static/img/layout/apachelogo.jpg" width="250" height="146" alt="Logo" /></a>
 		</div><!-- end logo -->
 		<!-- Start menu -->
 		<div class="menu">
@@ -106,10 +106,10 @@
 <div id="footer" class="clearfix cf">
 	<p>BUAASCSE 2019 &copy; 软件工程实验 <target="_blank" title="模板之家">弟归</a></p>
 	<ul class="clean">
-		<li><a href="#"><img src="static/img/layout/rss.png" width="25" height="18" alt="Rss Feed" /></a></li>
-		<li><a href="#"><img src="static/img/layout/twitter.png" width="25" height="18" alt="Twitter" /></a></li>
-		<li><a href="#"><img src="static/img/layout/dribbble.png" width="25" height="18" alt="Dribbble" /></a></li>
-		<li><a href="#"><img src="static/img/layout/facebook.png" width="8" height="18" alt="Facebook" /></a></li>
+		<li><a href="#"><img src="../static/img/layout/rss.png" width="25" height="18" alt="Rss Feed" /></a></li>
+		<li><a href="#"><img src="../static/img/layout/twitter.png" width="25" height="18" alt="Twitter" /></a></li>
+		<li><a href="#"><img src="../static/img/layout/dribbble.png" width="25" height="18" alt="Dribbble" /></a></li>
+		<li><a href="#"><img src="../static/img/layout/facebook.png" width="8" height="18" alt="Facebook" /></a></li>
 	</ul>
 </div><!-- end footer -->
 
