--- a/demo/templates/contact.html
+++ b/demo/templates/contact.html
@@ -63,26 +63,27 @@
 <body>
   <div id="container">
   	<!-- Side view contains the logo and header section -->
-  	<div class="sideview">
+    <div class="sideview">
   		<div class="logo">
   			<a href="/"><img src="static/img/layout/apachelogo.jpg" width="250" height="146" alt="Logo" /></a>
   		</div><!-- end logo -->
   		<!-- Start menu -->
   		<div class="menu">
   			<ul class="nav">
-  				<li><a href="/">Home<span class="desc">Back to the home page</span></a></li>
+  				<li><a href="/">主页<span class="desc">回到首页</span></a></li>
   				<li class="dropdown"><a href="#">Apache配置<span class="desc">Layouts</span></a>
   					<ul>
-  						<li><a href="../background-image/index.html">Fullscreen Image Background</a></li>
-  						<li><a href="../background-video/index.html">Fullscreen Video Background</a></li>
-  						<li><a href="../background-plain/index.html">Plain Background</a></li>
+  						<li><a href="/func/conf">配置管理</a></li>
+  						<li><a href="/func/effi">性能监控</a></li>
+  						<li><a href="/func/path">路径管理</a></li>
+              <li><a href="/func/module">模块管理</a></li>
   					</ul>
   				</li>
   				<li><a href="/about">团队介绍<span class="desc">Meet the team</span></a></li>
-  				<li class="dropdown"><a href="3-column.html">Our Work<span class="desc">Clients and projects</span></a>
+  				<li class="dropdown"><a href="/introduction">应用介绍<span class="desc">Clients and projects</span></a>
   					<ul>
-  						<li><a href="1-column.html">1 Column Gallery</a></li>
-  						<li><a href="3-column.html">3 Column Gallery</a></li>
+  						<li><a href="/introduction/usecase">用途介绍</a></li>
+  						<li><a href="/introduction/function">功能介绍</a></li>
   					</ul>
   				</li>
   				<!-- <li class="dropdown"><a href="blog.html">Blog<span class="desc">Catch up on some news</span></a>
