--- a/demo/templates/introduction.html
+++ b/demo/templates/introduction.html
@@ -71,8 +71,8 @@
 		<!-- Start menu -->
 		<div class="menu">
 			<ul class="nav">
-				<li><a href="/">主页<span class="desc">back to homepage</span></a></li>
-				<li class="dropdown"><a href="#">Apache配置<span class="desc">function</span></a>
+				<li><a href="/">主页<span class="desc">回到首页</span></a></li>
+				<li class="dropdown"><a href="#">Apache配置<span class="desc">Layouts</span></a>
 					<ul>
 						<li><a href="/func/conf">配置管理</a></li>
 						<li><a href="/func/effi">性能监控</a></li>
@@ -80,8 +80,8 @@
             <li><a href="/func/module">模块管理</a></li>
 					</ul>
 				</li>
-				<li><a href="/about">团队介绍<span class="desc">know about us</span></a></li>
-				<li class="dropdown"><a href="/introduction">应用介绍<span class="desc">introduction of our application</span></a>
+				<li><a href="/about">团队介绍<span class="desc">Meet the team</span></a></li>
+				<li class="dropdown"><a href="/introduction">应用介绍<span class="desc">Clients and projects</span></a>
 					<ul>
 						<li><a href="/introduction/usecase">用途介绍</a></li>
 						<li><a href="/introduction/function">功能介绍</a></li>
