修改了“联系我们”页面的一些内容，添加了部分基本信息

--- a/demo/templates/contact.html
+++ b/demo/templates/contact.html
@@ -99,8 +99,8 @@
 	<!-- Start Content -->
 	<div class="content contact cf">
 		<div class="grid-1">
-			<h1>Contact Us</h1>
-			<p><strong>Lorem ipsumia dolor sit ametis and the consectetur adipisicing elit, sed dos eiusmod tempor incididunt uno labores set dolore magna an sofar. Lorem ipsumia dolor sit ametis and the consectetur adipisicing elit, sed dos eiusmod tempor incididunt uno labores set dolore magna an sofar.</strong></p>
+			<h1>联系我们</h1>
+			<p><strong>您可以通过以下给出的联系方式（e.g.邮箱或者电话）联系我们</strong></p>
 		</div>
 
 		<div class="grid-4">
@@ -118,16 +118,13 @@
 		</div>
 
 		<div class="grid-3 extend last">
-			<h2>Contact Details</h2>
+			<h2>联系方式</h2>
 			<ul class="contact-details">
-				<li>Tel: <span>074 125 6528</span></li>
-				<li>Fax: <span>012 327 2675</span></li>
-				<li>Email: <span><a href="mailto:info@example.com">info@example.com</a></span></li>
-				<li>Address<br /> <span>701 Koby Street<br />Pretoria, <br />0183<br />South Africa</span></li>
+				<li>Tel: <span>010-12345678</span></li>
+				<li>Phone: <span>12345678910</span></li>
+				<li>Email: <span><a href="mailto:info@example.com">jk_0816@buaa.edu.cn</a></span></li>
+				<li>Address<br /> <span>北京市<br />海淀区<br />学院路37号<br />北京航空航天大学</span></li>
 			</ul>
-		</div>
-		<div class="grid-1">
-			<iframe width="710" height="300" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://maps.google.co.za/maps?q=hollywood+california&amp;ie=UTF8&amp;hq=&amp;hnear=Hollywood,+Los+Angeles,+California,+United+States&amp;gl=za&amp;t=m&amp;z=14&amp;ll=34.092809,-118.328661&amp;output=embed"></iframe>
 		</div>
 	</div><!-- end content -->
 </div><!-- end container -->
