添加了配置管理页面的内容，待完善

--- a/demo/templates/conf.html
+++ b/demo/templates/conf.html
@@ -99,8 +99,59 @@
     <div class="copyrights">Collect from <a href="http://www.cssmoban.com/" >Website Template</a></div>
 <!-- Start Content -->
 	<div class="content cf">
+		<div class="grid-1 cf">
+			<h1>配置管理</h1>
+			<p><strong>您可以在此查看当前配置文件路径、管理配置文件路径、读取配置信息和修改配置信息</strong></p>
+			<!--<ul id="filter">-->
+				<!--<li class="current"><a href="#">All</a></li>-->
+				<!--<li><a href="#">Design</a></li>-->
+				<!--<li><a href="#">Photography</a></li>-->
+				<!--<li><a href="#">Development</a></li>-->
+				<!--<li><a href="#">Services</a></li>-->
+			<!--</ul>-->
+		</div>
+		<div class="gallery">
+			<ul id="portfolio-one">
+				<li class="development design">
+				<h2>当前配置文件路径</h2>
+				<div class="project-desc">
+					<strong>放置配置文件路径</strong>
+					<p>施工中。。。</p>
+				</div>
+				</li>
 
+				<li class="development photography">
+				<h2>修改配置文件路径</h2>
+
+				<div class="project-desc">
+					<strong>放置文件路径设置项，box+button</strong>
+					<p>施工中。。。</p>
+				</div>
+				</li>
+
+				<li class="photography design">
+				<h2>当前配置文件信息</h2>
+
+				<div class="project-desc">
+					<strong>放置当前配置文件信息</strong>
+					<p>施工中。。。</p>
+				</div>
+				</li>
+
+				<li class="design services">
+				<h2>修改配置文件信息</h2>
+
+				<div class="project-desc">
+					<strong>放置配置文件修改项，ul+li+box+button</strong>
+					<p>施工中</p>
+				</div>
+				</li>
+
+			</ul>
+			</div>
+		</div><!-- end grid-1 -->
 	</div><!-- end content -->
+
 </div><!-- end container -->
 <!-- Start footer -->
 <div id="footer" class="clearfix cf">
