--- a/demo/templates/path.html
+++ b/demo/templates/path.html
@@ -99,7 +99,47 @@
     <div class="copyrights">Collect from <a href="http://www.cssmoban.com/" >Website Template</a></div>
 <!-- Start Content -->
 	<div class="content cf">
+    <div class="grid-1 cf">
+			<h1>性能监控</h1>
+			<p><strong>您可以在此查看Apache服务器的相关性能参数，以便于您更好地掌握本地服务器状态</strong></p>
+			<!--<ul id="filter">-->
+				<!--<li class="current"><a href="#">All</a></li>-->
+				<!--<li><a href="#">Design</a></li>-->
+				<!--<li><a href="#">Photography</a></li>-->
+				<!--<li><a href="#">Development</a></li>-->
+				<!--<li><a href="#">Services</a></li>-->
+			<!--</ul>-->
+		</div>
+		<div class="gallery">
+			<ul id="portfolio-one">
+				<li class="development design">
+				<h2>查看Apache状态</h2>
+				<div class="project-desc">
+					<strong>放置Apache状态情况</strong>
+					<p>施工中。。。</p>
+				</div>
+				</li>
 
+				<li class="development photography">
+				<h2>改变Apache状态</h2>
+
+				<div class="project-desc">
+					<strong>Apache状态改变按钮</strong>
+					<p>施工中。。。</p>
+				</div>
+				</li>
+
+				<li class="photography design">
+				<h2>查看性能参数</h2>
+
+				<div class="project-desc">
+					<strong>放置Apache性能相关参数（可能是图表为主）</strong>
+					<p>施工中。。。</p>
+				</div>
+				</li>
+			</ul>
+			</div>
+		</div><!-- end grid-1 -->
 	</div><!-- end content -->
 </div><!-- end container -->
 <!-- Start footer -->
