修改了所有页面中路径管理为日志管理，保证和项目设计文档的一致性

--- a/demo/templates/about.html
+++ b/demo/templates/about.html
@@ -76,7 +76,7 @@
   					<ul>
   						<li><a href="/func/conf">配置管理</a></li>
   						<li><a href="/func/effi">性能监控</a></li>
-  						<li><a href="/func/path">路径管理</a></li>
+  						<li><a href="/func/path">日志管理</a></li>
               <li><a href="/func/module">模块管理</a></li>
   					</ul>
   				</li>
