--- a/demo/templates/introduction.html
+++ b/demo/templates/introduction.html
@@ -6,7 +6,7 @@
 
 <!-- Load main style sheets -->
 <link rel="stylesheet" href="static/styles.css" />
-
+<link href="static/semantic-ui/semantic.css" rel="stylesheet">
 
 <link rel="shortcut icon" type="static/image/x-icon" href="favicon.ico" />
 
