模块管理初步页面

--- a/demo/templates/conf.html
+++ b/demo/templates/conf.html
@@ -2,6 +2,8 @@
 {% block title %}
  配置管理
 {% endblock %}
+{% block head %}
+{% endblock %}
 {% block MainContainer %}
     <div class="content cf">
 		<div class="grid-1 cf">
