--- a/demo/templates/base.html
+++ b/demo/templates/base.html
@@ -18,10 +18,9 @@
 <script src="../static/js/jquery.nivo.slider.pack.js"></script>
 <script src="../static/js/jquery.prettyPhoto.js"></script>
 <script src="../static/js/jquery.validate.js"></script>
-<script src="../static/semantic-ui/semantic.min.js"></script>
 <script type="text/javascript" src="../static/js/jquery.easing.1.3.js"></script>
 <script type="text/javascript" src="../static/js/background-image.js"></script>
-
+{% block head %}{% endblock %}
 <!-- Nivo Slider -->
     <script type="text/javascript">
     $(window).load(function() {
