配置管理的小修改

--- a/demo/templates/conf.html
+++ b/demo/templates/conf.html
@@ -11,32 +11,67 @@
 		<div class="gallery">
 			<ul id="portfolio-one">
 				<li class="development design">
-				<h2 class="ui center aligned icon header">
-                    <i class="mini settings icon"></i>
-                      原配置文件路径
-                </h2>
-                    <p align="center">
-                    路径
-                    </p>
+				<h2 class="ui left aligned icon header">原配置文件路径</h2>
+        <div class="ui left labeled button " >
+          <a class="ui basic right label">
+          路径内容，使用js读取后端实时返回内容
+          </a>
+          <div class="ui button">
+            <i class="sync icon"></i> 刷新
+          </div>
+        </div>
 				</li>
 
 				<li class="development photography">
 				<h2>修改配置文件路径</h2>
-                    <div class="ui fluid action input">
-                        <input type="text" placeholder="Search...">
-                        <button class="ui button"><i class="large folder open outline icon"></i></button>
+        <div class="ui fluid action input">
+            <input type="text" placeholder="Search...">
+                <button class="ui button"><i class="large folder open outline icon"></i></button>
                         &nbsp;
-                        <button class="ui button">修改</button>
-                    </div>
+                <button class="ui button">修改</button>
+                </div>
 				</li>
 
 				<li class="photography design">
 				<h2>当前配置文件信息</h2>
 
 				<div class="project-desc">
-					<strong>放置当前配置文件信息</strong>
-					<p>施工中。。。</p>
-				</div>
+          <div class="ui vertical button labeled ">
+            <div class="ui labeled button" tabindex="0">
+              <div class="ui button">
+                <i class="heart icon"></i> 喜欢
+              </div>
+              <a class="ui basic label">
+                2,048
+              </a>
+            </div>
+            <div class="ui labeled button" tabindex="0">
+              <div class="ui button">
+                <i class="heart icon"></i> 喜欢
+              </div>
+              <a class="ui basic label">
+                2,048
+              </a>
+            </div>
+            <div class="ui labeled button" tabindex="0">
+              <div class="ui button">
+                <i class="heart icon"></i> 喜欢
+              </div>
+              <a class="ui basic label">
+                2,048
+              </a>
+            </div>
+            <div class="ui labeled button" tabindex="0">
+              <div class="ui button">
+                <i class="heart icon"></i> 喜欢
+              </div>
+              <a class="ui basic label">
+                2,048
+              </a>
+            </div>
+          </div>
+        </div>
+
 				</li>
 
 				<li class="design services">
