基本完成配置管理页面施工，对其他页面做了背景图的修改，改成一张了，但还是感觉不好，计划做成静态背景

--- a/demo/templates/base.html
+++ b/demo/templates/base.html
@@ -37,11 +37,7 @@
           autoplay: "true",
           autoplayTime: 5,
 
-          images:["../static/img/fullscreen/screen1.jpg",
-          			"../static/img/fullscreen/screen2.jpg",
-					"../static/img/fullscreen/screen3.jpg",
-					"../static/img/fullscreen/screen4.JPG",
-					"../static/img/fullscreen/screen5.jpg"],
+          images:["../static/img/fullscreen/screen2.jpg"],
           images_sizing: "fill", // fill || adjust || stretch || repeat
 
           animationIn: { attribute:["y", "alpha"], // x || y || alpha
