--- a/demo/templates/conf.html
+++ b/demo/templates/conf.html
@@ -27,7 +27,7 @@
 				<li class="development photography">
 				<h2>修改配置文件路径</h2>
         <div class="ui fluid action input">
-            <input type="text" placeholder="Search...">
+            <input type="text" placeholder="默认路径">
                 <button class="ui button"><i class="large folder open outline icon"></i></button>
                         &nbsp;
                 <button class="ui button">修改</button>
@@ -37,40 +37,41 @@
 				<li class="photography design">
 				<h2>当前配置文件信息</h2>
 
-				<div class="project-desc">
-          <div class="ui vertical button labeled ">
-            <div class="ui labeled button" tabindex="0">
-              <div class="ui button">
-                <i class="heart icon"></i> 喜欢
-              </div>
-              <a class="ui basic label">
-                2,048
-              </a>
+				<div >
+          <div class="ui grid">
+            <div class="twelve wide column">
+
             </div>
-            <div class="ui labeled button" tabindex="0">
-              <div class="ui button">
-                <i class="heart icon"></i> 喜欢
+
+
+          </div>
+          <div class="ui segment">
+              <div class="ui fluid action input">
+                <a class="ui basic right label">
+                路径内容，使用js读取后端实时返回内容
+                </a>
+                <div class="ui button">
+                  <i class="sync icon"></i> 刷新
+                </div>
               </div>
-              <a class="ui basic label">
-                2,048
-              </a>
-            </div>
-            <div class="ui labeled button" tabindex="0">
-              <div class="ui button">
-                <i class="heart icon"></i> 喜欢
+              <div class="ui divider"></div>
+              <div class="ui fluid action input">
+                <a class="ui basic right label">
+                路径内容，使用js读取后端实时返回内容
+                </a>
+                <div class="ui button">
+                  <i class="sync icon"></i> 刷新
+                </div>
               </div>
-              <a class="ui basic label">
-                2,048
-              </a>
-            </div>
-            <div class="ui labeled button" tabindex="0">
-              <div class="ui button">
-                <i class="heart icon"></i> 喜欢
+              <div class="ui divider"></div>
+              <div class="ui fluid action input">
+                <a class="ui basic right label">
+                路径内容，使用js读取后端实时返回内容
+                </a>
+                <div class="ui button">
+                  <i class="sync icon"></i> 刷新
+                </div>
               </div>
-              <a class="ui basic label">
-                2,048
-              </a>
-            </div>
           </div>
         </div>
 
@@ -78,11 +79,22 @@
 
 				<li class="design services">
 				<h2>修改配置文件信息</h2>
-
-				<div class="project-desc">
-					<strong>放置配置文件修改项，ul+li+box+button</strong>
-					<p>施工中</p>
-				</div>
+        <div class="ui segment">
+            <div class="ui fluid action input">
+              <input type="text" placeholder="配置项1">
+              <div class="ui button">修改</div>
+            </div>
+            <div class="ui divider"></div>
+            <div class="ui fluid action input">
+              <input type="text" placeholder="配置项2">
+              <div class="ui button">修改</div>
+            </div>
+            <div class="ui divider"></div>
+            <div class="ui fluid action input">
+              <input type="text" placeholder="配置项3">
+              <div class="ui button">修改</div>
+            </div>
+        </div>
 				</li>
 
 			</ul>
